2013-01-17  Jihoon Kim (jihoon)

	* Edje : cursor position and location will be passed when it's really changed
	in case of mouse down, move, and up event

2013-01-16  Carsten Haitzler (The Rasterman)

        * Fixed pixman image wrapping to handle allocated size instead
        of image size (unless allocated is 0/wrong).

2013-01-15  Paulo Alcantara (pcacjr)

	* Evas engines: Introduce multi_font_draw() function
	* Evas textgrid: Change render to support multi_font_draw()

2013-01-15  Tom Hacohen (TAsn)

	* Evas textblock: Fixed issue and simplified cursor_geometry_get.
	* Evas text: Fixed issue with horiz advance.
	* Evas text utils: Fixed issue with no-harfbuzz bidi.

2013-01-14  Daniel Willmann

	* edje: Fix off-by-one errors when using alloca in various functions

2013-01-14  Tom Hacohen (TAsn)

	* Evas textblock: Fixed issue with line height when breaking on a
	format.

2013-01-14  Cedric Bail

	* Fix bug in eio_file_map_new container set.

2013-01-14  Albin Tonerre

	* Fix endianess issue in Eet_Image.

2013-01-13  Boris Faure (billiob)

	* Fixed condition based on uninitialized value in ecore_x_selection
	(both xlib and xcb).
	* Fixed a leaked when no selection converter matches.

2013-01-11  Tom Hacohen (TAsn)

	* Static libs: Updated liblinebreak to libunibreak's latest version.
	* Evas texblock: Fixed a bug with breaking after format items.

2013-01-11  Cedric Bail

	* Fix not up to date clip cache for Evas_Object_Text.

2013-01-09  Jiyoun Park (jypark)

	* Fix evas bmp loader code which deal with image size.

2013-01-08  Gustavo Sverzut Barbieri (k-s)

	* Fix eina_prefix_new() with debian multilib without magic check file.

2013-01-08  Mike Blumenkrantz

        * Fix efreet desktop command parsing of https

2013-01-07  Sung W. Park (sung_)

	* Pulled out evas gl backend binary shader file caching code from 
        evas_gl_shader.c file and made an internal generic caching api in 
        evas_gl_common.h for use in evas_gl code.