@@ -1,3 +1,8 @@
+2013-01-18  Cedric Bail
+
+	* Ecore_Input_Evas: add infrastructure to handle buggy touchscreen by using
+	environment variable ECORE_INPUT_FIX and ECORE_INPUT_TIMEOUT_FIX.
+
 2013-01-17  Jihoon Kim (jihoon)
 
 	* Edje : cursor position and location will be passed when it's really changed
